--- a/notebooks/01_experiments/RUNNER.ipynb
+++ b/notebooks/01_experiments/RUNNER.ipynb
@@ -143,11 +143,11 @@
    },
    "outputs": [],
    "source": [
-    "# Import custom modules from scripts folder\n",
-    "from scripts.pre_processing import load_and_preprocess_data\n",
-    "from scripts import pre_processing\n",
+    "# Import custom modules from organized scripts subpackages\n",
+    "from scripts.data.pre_processing import load_and_preprocess_data\n",
+    "from scripts.data import pre_processing\n",
     "\n",
-    "from scripts.Importance import (\n",
+    "from scripts.optimization.Importance import (\n",
     "    entropy_importance, \n",
     "    average_importance, \n",
     "    median_importance, \n",
@@ -156,21 +156,21 @@
     "    mutual_information_importance\n",
     ")\n",
     "\n",
-    "from scripts.Redundancy import calculate_redundancy_matrix\n",
+    "from scripts.optimization.Redundancy import calculate_redundancy_matrix\n",
     "\n",
-    "from scripts.QUBO import (\n",
+    "from scripts.optimization.QUBO import (\n",
     "    formulate_qubo, \n",
     "    solve_qubo_with_openjij, \n",
     "    solve_qubo_with_SA\n",
     ")\n",
     "\n",
-    "from scripts.ML_post_processing import train_regressor\n",
+    "from scripts.ml.ML_post_processing import train_regressor\n",
     "\n",
-    "from scripts.Analysis import calculate_comprehensive_metrics\n",
+    "from scripts.evaluation.Analysis import calculate_comprehensive_metrics\n",
     "\n",
-    "from scripts.helpers import save_to_excel, remove_selected_aps\n",
+    "from scripts.utils.helpers import save_to_excel, remove_selected_aps\n",
     "\n",
-    "from scripts.data_loaders import (\n",
+    "from scripts.data.data_loaders import (\n",
     "    save_all_importance_dicts,\n",
     "    load_all_precomputed_data,\n",
     "    load_importance_dict_from_csv,\n",
