--- a/notebooks/03_visualizations/produce_visualizations.ipynb
+++ b/notebooks/03_visualizations/produce_visualizations.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scripts.Visualizations_Functions import (\n",
+    "from scripts.visualization.Visualizations_Functions import (\n",
     "    plot_ap_importance,\n",
     "    plot_redundancy_matrix,\n",
     "    plot_error_comparison, \n",
@@ -51,9 +51,9 @@
     "    plot_building_fingerprints_3d,\n",
     "    plot_building_comparison_3d\n",
     ")\n",
-    "from scripts.data_loaders import load_preprocessed_data, load_all_precomputed_data\n",
-    "from scripts.ML_post_processing import train_regressor\n",
-    "from scripts import pre_processing"
+    "from scripts.data.data_loaders import load_preprocessed_data, load_all_precomputed_data\n",
+    "from scripts.ml.ML_post_processing import train_regressor\n",
+    "from scripts.data import pre_processing"
    ]
   },
   {
