--- a/notebooks/01_experiments/RUNNER.ipynb
+++ b/notebooks/01_experiments/RUNNER.ipynb
@@ -198,7 +198,7 @@
    "source": [
     "# Load data\n",
     "\n",
-    "data_dir = Path('data') / 'input_data'\n",
+    "data_dir = Path('../../data') / 'input_data'\n",
     "df_train_path = data_dir / 'TrainingData.csv'\n",
     "df_validation_path = data_dir / 'ValidationData.csv'\n",
     "\n",
@@ -714,7 +714,7 @@
    ],
    "source": [
     "# Save system parameters (normalization values and floor height) to CSV\n",
-    "system_params_dir = Path('data') / 'system_input'\n",
+    "system_params_dir = Path('../../data') / 'system_input'\n",
     "system_params_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "system_params = pd.DataFrame({\n",
@@ -1299,7 +1299,7 @@
     "mutual_info_df = mutual_info_df.sort_values('MutualInfo_Score', ascending=False)\n",
     "\n",
     "# Create the output directory path\n",
-    "output_dir = Path('data') / 'output_data' / 'importance_scores'\n",
+    "output_dir = Path('../../data') / 'output_data' / 'importance_scores'\n",
     "\n",
     "# Save each DataFrame to Excel\n",
     "save_to_excel(entropy_df, output_dir, 'entropy_importance')\n",
@@ -1389,7 +1389,7 @@
    "source": [
     "# Save redundancy_matrix to Excel and CSV\n",
     "\n",
-    "output_dir = Path('data') / 'output_data' / 'redundancy_scores'\n",
+    "output_dir = Path('../../data') / 'output_data' / 'redundancy_scores'\n",
     "\n",
     "# Save as Excel\n",
     "save_to_excel(\n",
@@ -1418,7 +1418,7 @@
    "outputs": [],
    "source": [
     "# Load system parameters from CSV\n",
-    "system_params_path = Path('data') / 'system_input' / 'system_parameters.csv'\n",
+    "system_params_path = Path('../../data') / 'system_input' / 'system_parameters.csv'\n",
     "system_params_df = pd.read_csv(system_params_path)\n",
     "\n",
     "# Convert to dictionary for easy access\n",
