--- a/notebooks/02_analysis/EDA_analysis.ipynb
+++ b/notebooks/02_analysis/EDA_analysis.ipynb
@@ -69,7 +69,7 @@
    ],
    "source": [
     "# Define data paths\n",
-    "data_dir = Path('data') / 'input_data'\n",
+    "data_dir = Path('../../data') / 'input_data'\n",
     "train_path = data_dir / 'TrainingData.csv'\n",
     "val_path = data_dir / 'ValidationData.csv'\n",
     "\n",
@@ -199,10 +199,10 @@
       "================================================================================\n",
       "BUILDING-LEVEL STATISTICS\n",
       "================================================================================\n",
-      " Building_ID  Training_Fingerprints  Validation_Fingerprints  Total_Fingerprints  Number_of_Floors      Floor_List      Longitude_Range           Latitude_Range Area_Approximate_m2  Unique_Spaces\n",
-      "           0                   5249                      536                5785                 4    [0, 1, 2, 3] [-7695.94, -7585.39] [4864894.80, 4865017.36]            13549.84             78\n",
-      "           1                   5196                      307                5503                 4    [0, 1, 2, 3] [-7578.46, -7404.49] [4864809.46, 4864959.51]            26103.64             86\n",
-      "           2                   9492                      268                9760                 5 [0, 1, 2, 3, 4] [-7415.16, -7299.79] [4864745.75, 4864861.76]            13384.95             97\n",
+      " Building_ID  Training_Fingerprints  Validation_Fingerprints  Total_Fingerprints  Number_of_Floors                                                        Floor_List      Longitude_Range           Latitude_Range Area_Approximate_m2  Unique_Spaces\n",
+      "           0                   5249                      536                5785                 4              [np.int64(0), np.int64(1), np.int64(2), np.int64(3)] [-7695.94, -7585.39] [4864894.80, 4865017.36]            13549.84             78\n",
+      "           1                   5196                      307                5503                 4              [np.int64(0), np.int64(1), np.int64(2), np.int64(3)] [-7578.46, -7404.49] [4864809.46, 4864959.51]            26103.64             86\n",
+      "           2                   9492                      268                9760                 5 [np.int64(0), np.int64(1), np.int64(2), np.int64(3), np.int64(4)] [-7415.16, -7299.79] [4864745.75, 4864861.76]            13384.95             97\n",
       "================================================================================\n"
      ]
     }
@@ -670,7 +670,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Saving all results to: data\\EDA\\EDA_Analysis_20251020_235415.xlsx\n",
+      "Saving all results to: ..\\..\\data\\EDA\\EDA_Analysis_20251105_203148.xlsx\n",
       "================================================================================\n",
       "✓ Sheet 1: Overview\n",
       "✓ Sheet 2: Building Statistics\n",
@@ -684,7 +684,7 @@
       "================================================================================\n",
       "\n",
       "✓✓✓ All results saved successfully to:\n",
-      "    data\\EDA\\EDA_Analysis_20251020_235415.xlsx\n",
+      "    ..\\..\\data\\EDA\\EDA_Analysis_20251105_203148.xlsx\n",
       "\n",
       "The Excel file contains 9 sheets with comprehensive EDA results.\n"
      ]
@@ -692,7 +692,7 @@
    ],
    "source": [
     "# Create output directory\n",
-    "output_dir = Path('data') / 'EDA'\n",
+    "output_dir = Path('../../data') / 'EDA'\n",
     "output_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# Generate timestamp\n",
@@ -939,7 +939,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
