--- a/notebooks/03_visualizations/produce_visualizations.ipynb
+++ b/notebooks/03_visualizations/produce_visualizations.ipynb
@@ -94,7 +94,7 @@
     "print(\"LOADING SYSTEM PARAMETERS\")\n",
     "print(\"=\" * 60)\n",
     "\n",
-    "system_params_path = Path('data') / 'system_input' / 'system_parameters.csv'\n",
+    "system_params_path = Path('../../data') / 'system_input' / 'system_parameters.csv'\n",
     "system_params_df = pd.read_csv(system_params_path)\n",
     "\n",
     "# Convert to dictionary for easy access\n",
@@ -174,7 +174,7 @@
     "print(\"LOADING QUBO RESULTS\")\n",
     "print(\"=\" * 60)\n",
     "\n",
-    "results_dir = Path('data') / 'results'\n",
+    "results_dir = Path('../../data') / 'results'\n",
     "results_file = results_dir / 'qubo_results.xlsx'\n",
     "\n",
     "if not results_file.exists():\n",
@@ -577,7 +577,7 @@
     "# Load system parameters from CSV\n",
     "print(\"Loading system parameters and preprocessed data for 3D visualizations...\")\n",
     "\n",
-    "system_params_path = Path('data') / 'system_input' / 'system_parameters.csv'\n",
+    "system_params_path = Path('../../data') / 'system_input' / 'system_parameters.csv'\n",
     "system_params_df = pd.read_csv(system_params_path)\n",
     "\n",
     "# Convert to dictionary for easy access\n",
@@ -895,7 +895,7 @@
    ],
    "source": [
     "# Generate predictions for all methods and create 3D visualizations\n",
-    "output_viz_dir = Path('data') / 'output_data' / 'visualizations_3d'\n",
+    "output_viz_dir = Path('../../data') / 'output_data' / 'visualizations_3d'\n",
     "output_viz_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "print(\"Comparing different importance methods in 3D...\\n\")\n",
@@ -1130,7 +1130,7 @@
    ],
    "source": [
     "# Create output directory for 2D plots\n",
-    "output_2d_dir = Path('data') / 'output_data' / 'visualizations_2d'\n",
+    "output_2d_dir = Path('../../data') / 'output_data' / 'visualizations_2d'\n",
     "output_2d_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "print(\"Saving 2D visualizations...\\n\")\n",
