--- a/notebooks/01_experiments/RUNNER.ipynb
+++ b/notebooks/01_experiments/RUNNER.ipynb
@@ -9,6 +9,9 @@
     },
     "collapsed": true,
     "id": "66yYjSX-CNaD",
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "outputId": "85ab7a5e-2ff4-4a1e-f249-d3b81e4773f5"
    },
    "outputs": [
@@ -1633,7 +1636,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "248mo5jk8jj",
    "metadata": {},
    "outputs": [
     {
@@ -1699,7 +1701,8 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -1712,9 +1715,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
