--- a/paper/paper2.tex
+++ b/paper/paper2.tex
@@ -434,6 +434,6 @@ Through comprehensive hyperparameter optimization, we identified optimal QUBO pa
 Our approach provides a practical, deployable solution for budget-constrained indoor positioning systems, enabling significant hardware cost reduction while maintaining acceptable localization accuracy. Future work will extend evaluation to multiple buildings, compare against classical optimization baselines, and investigate floor-specific AP budgeting strategies.
 
 \bibliographystyle{IEEEtran}
-\bibliography{references}
+\bibliography{refrences}
 
 \end{document}
